compiler/testData/diagnostics/tests/multimodule/inaccessibleSuperTypeWithRepeatedContext.diag.txt
// -- Module: <a> --

// -- Module: <b> --

// -- Module: <c> --
/c.kt:23:14: error: cannot access 'MissedInterface' which is a supertype of 'Implementation'. Check your module classpath for missing or conflicting dependencies
    val x1 = onlyClassReferences
             ^^^^^^^^^^^^^^^^^^^
/c.kt:26:14: error: cannot access 'MissedInterface' which is a supertype of 'Implementation'. Check your module classpath for missing or conflicting dependencies
    val x2 = allHierarchy
             ^^^^^^^^^^^^
